--- a/app/src/main/res/layout/activity_choose_user.xml
+++ b/app/src/main/res/layout/activity_choose_user.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SnapsActivity">
+    tools:context=".ChooseUserActivity">
 
     <ListView
-        android:id="@+id/snapsListView"
+        android:id="@+id/chooseUserListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
