--- a/app/src/main/res/layout/activity_create_snap.xml
+++ b/app/src/main/res/layout/activity_create_snap.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/createSnapImageView"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="319dp"
+        android:layout_height="423dp"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -33,7 +33,7 @@
         android:id="@+id/messageEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:ems="10"
         android:hint="Message"
         android:inputType="textPersonName"
@@ -44,11 +44,12 @@
 
     <Button
         android:id="@+id/nextButton"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:onClick="nextClicked"
         android:text="next"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
